--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -21,12 +21,12 @@ jobs:
       - name: Docker Setup QEMU
         uses: docker/setup-qemu-action@v3
         with:
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/arm64
 
       - name: Docker Setup Buildx
         uses: docker/setup-buildx-action@v3
         with:
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/arm64
 
       - name: Docker Login
         uses: docker/login-action@v3
@@ -39,5 +39,5 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/arm64
           tags: ljason/docker-factorio:latest
